# Rustdesk-FreeConsole

./: .gitignore  BUGFIX_CHANGELOG.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER_SUPPORT.md  DOCKER_TROUBLESHOOTING.md  Dockerfile.console  Dockerfile.hbbr  Dockerfile.hbbs  GITHUB_RELEASE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PORT_SECURITY.md  PROJECT_ORGANIZATION.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v1.3.0.md  SECURITY_PLACEHOLDERS.md  SECURITY_URGENT.md  VERSION  betterdesk-docker.sh  betterdesk-updated.service  betterdesk.ps1  betterdesk.sh  build-betterdesk.ps1  build-betterdesk.sh  build_windows.sh  docker-compose.yml  docker-entrypoint.sh  docker-quickstart.sh  fix-admin.bat  install-docker.sh  install-improved.ps1  install-improved.sh  install.sh  main.py  repair-keys.sh  update-to-v1.4.0.sh
.github/: copilot-instructions.md  rustdesk_client.md
archive/: restore_hbbs.sh  update.sh
dev_modules/: README.md  check_and_fix_database.sh  check_audit.sh  check_database.py  check_id.py  diagnose_offline_status.sh  fix_database.py  fix_peer_columns.sh  fix_systemd_services.sh  patch_database_simple.py  patch_id_change.py  patch_id_change_v2.py  patch_peer_remove.py  (+7 more)
hbbs-patch-v2/: .gitignore  BUILD.md  CHANGES.md  CHECKSUMS.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  INDEX.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  TODO.md  build.sh  complete.sh  hbbr-linux-x86_64
hbbs-patch-v2/src/: database.rs  http_api.rs  main.rs  peer.rs  peer_fixed.rs  relay_server.rs  rendezvous_server.rs  rendezvous_server_core.rs
(+185 files in other folders)
