[package]
name = "betterdesk-server"
version = "2.0.0"
edition = "2021"
authors = ["BetterDesk Contributors"]
description = "Enhanced RustDesk Server with improved stability and performance"
license = "AGPL-3.0"

[[bin]]
name = "hbbs"
path = "src/main.rs"

[dependencies]
# Core RustDesk dependencies (match version from original project)
hbb_common = { path = "../rustdesk-server-1.1.14/hbb_common" }
hbbs = { path = "../rustdesk-server-1.1.14/hbbs" }

# Enhanced logging
flexi_logger = "0.27"
log = "0.4"

# Database with async support
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
deadpool = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP API
axum = { version = "0.6", features = ["ws"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sodiumoxide = "0.2"
base64 = "0.21"

# Network
ipnetwork = "0.20"
local-ip-address = "0.5"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
bytes = "1.4"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[features]
default = []
